@@ -6,6 +6,8 @@ Revision history for CGI-Info
 	Ensure + is handled in parameters when encoded as %2B
 	cgi_host_url could sometimes give http:// instead of https://
 	Set minimum version as 5.6.1 since we use the 3 argument open()
+	When running outside CGI, allow one of --tablet, --search-engine,
+		--mobile and --robot to mimick those agents.
 
 0.51	Fri Jan  2 20:34:46 EST 2015
 	Fix breakage on older Perls
